--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,17 +9,7 @@
     </head>
     <body>
         <body>
-    <div class="page-header">
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-        {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-        {% endif %}
-        <h1><a href="/">Networking Tutorial</a></h1>
-    </div>
-    <div class="content container">
+         <div class="content container">
         <div class="row">
             <div class="col-md-8">
             {% block content %}
@@ -27,6 +17,20 @@
             </div>
         </div>
     </div>
+         
+        {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+            <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+        {% else %}
+            <a href="{% url 'login' %}" class="top-menu"> Login <span class="glyphicon glyphicon-lock"></span></a>
+        {% endif %}
+        <h1><a href="/">Networking Tutorial</a></h1>
+         <ul class="nav navbar-nav navbar-right">
+        <li><a href="/accounts/register">register</a></li>
+    <div class="page-header">
+    </div>
+
 </body>
     </body>
 </html>
