Set-up  Registration Page

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -6,14 +6,15 @@ body {
     padding-left: 15px;
 }
 .page-header {
-    background-color: rgb(125,130,140);
+    background-color: rgb(100,100,100);
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 30px 30px 40px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 36pt;
+    font-size: 50pt;
+    display: inline-block;
     text-decoration: none;
 }
 
