--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,32 +5,40 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        {% block title %}
         <title>Django Girls blog</title>
+        {% endblock %}
+
     </head>
     <body>
         <body>
-         <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
-            </div>
-        </div>
-    </div>
-         
-        {% if user.is_authenticated %}
+        <br>
+        <div class="page-header">
+            <h1><a href="/">Networking Tutorial</a></h1>
+            <ul class="nav navbar-nav navbar-right">
+          {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
             <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
         {% else %}
-            <a href="{% url 'login' %}" class="top-menu"> Login <span class="glyphicon glyphicon-lock"></span></a>
+            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
-        <h1><a href="/">Networking Tutorial</a></h1>
-         <ul class="nav navbar-nav navbar-right">
-        <li><a href="/accounts/register">register</a></li>
-    <div class="page-header">
-    </div>
+        
+        </div>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+       
+        
 
 </body>
     </body>
 </html>
+
+
+
