--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -5,7 +5,7 @@
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
 
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'login' %}"> <!--replaced action from {% url 'login' %} to /login-->
     {% csrf_token %}
         <table>
         <tr>
