--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,6 +13,9 @@
     <body>
         <body>
         <br>
+        <div>
+            
+        </div>
         <div class="page-header">
             <h1><a href="/">Networking Tutorial</a></h1>
             <ul class="nav navbar-nav navbar-right">
@@ -22,9 +25,11 @@
             <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
         {% else %}
             <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+            <a href="{% url 'register' %}" class="top-menu"><span class="glyphicon glyphicon-user"></span></a>
         {% endif %}
         
         </div>
+
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
