Redirected to Login page after successfull registration

--- a/blog/templates/registration/registration_form.html
+++ b/blog/templates/registration/registration_form.html
@@ -6,7 +6,7 @@
 
   <!--<h2>Registration</h2>-->
 
-  <form action="/accounts/login/" method="post">
+  <form action="/register/complete/" method="post">
   	{% csrf_token %}
     {{form.as_p}}
   <input type="submit" value="Register" />
